required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.

Current Version (future 6.0.2, SVN branch-6-0):
---------------------------

- Fixed single pixel coverages in WCS 2.0 (#4110)

- Fixed subsetting in WCS 2.0 (#4099)

- Fixed segfault when calling classObj::updateFromString() with SYMBOL (#4062)

- fix rendering offset on thick GD lines (#3962)

- fix segfault on join with postgresql tables (#4074)

- Fixed Python Mapscript does not write COLOR to reference map (#4042)
 
- Fixed cannot add a style to a label in PHP/SWIG Mapscript (#4038) 

- Add missing support for outputFormat in WFS GetFeature POST XML requests (#4052)

- Fixed schema validity issue for WCS 1.1 GetCoverage responses (#4047)

- fix centroid geomtransform parser (#4029)

- PHP MapScript is missing many styleObj properties (#3901)

- Added GEOMTRANSFORM in writeStyle function

- WCS 1.0: Fix crash with some _rangeset_axes values (#4020)

- Changed msDrawVectorLayer() not to cache shapes if attribute binding is present after the first style (#3976)

- Fix mapscript to build when TRUE macro is not defined (#3926)

- Fix mapscript php build issues with MSVC (#4004)

- PHP/Mapscript: Segmentation fault when getting complex object using PHP 5.2 (#3930)

- Fixed contains operator in logical expresions (#3974)

- Fix incorrect rendering of GD lines between 1 and 2 pixels wide (#3962)

Version 6.0.1 (2011-07-12):
---------------------------

IMPORTANT SECURITY FIXES:

-  Fixes to prevent SQL injections through OGC filter encoding (in WMS, WFS 
   and SOS), as well as a potential SQL injection in WMS time support. 
   Your system may be vulnerable if it has MapServer with OGC protocols 